--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,20 @@
         />
         <title>Eddy's Portfolio</title>
     </head>
+    <!-- Google tag (gtag.js) -->
+    <script
+        async
+        src="https://www.googletagmanager.com/gtag/js?id=G-PHX28WV32Z"
+    ></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-PHX28WV32Z');
+    </script>
 
     <body>
         <div id="root"></div>
@@ -41,20 +55,5 @@
             crossorigin="anonymous"
         ></script>
         <script defer src="./js/timeline.js"></script>
-
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script
-            async
-            src="https://www.googletagmanager.com/gtag/js?id=UA-177525066-1"
-        ></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag() {
-                dataLayer.push(arguments);
-            }
-            gtag('js', new Date());
-
-            gtag('config', 'UA-177525066-1');
-        </script>
     </body>
 </html>
